--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,6 @@
   scale: 1.1;
 }
 
-.line2 {
-  color: #000;
-  font-size: 12px;
+.cards-text {
+  padding-top: 10px;
 }/*# sourceMappingURL=style.css.map */
