--- a/css/style.scss
+++ b/css/style.scss
@@ -56,6 +56,8 @@ $purple: rgb(181, 98, 212);
     align-items: center;
     display: flex;
     flex-wrap: wrap;
+    
+    
     background-color: linear-gradient(to top, rgba(0,0,0,0) 80%, $purple 20%);    
 }
 
@@ -71,8 +73,8 @@ $purple: rgb(181, 98, 212);
     scale: 1.1;
 }
 
-.line2{
-    color:#000;
-    font-size:12px;
+.cards-text {
+    padding-top: 10px;
 }
+
 
